--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>evpop-manage-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.zxevpop</groupId>
+            <artifactId>pay-gateway-api</artifactId>
+            <version>2.5.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
