--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>pay-gateway-api</artifactId>
             <version>2.5.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk16</artifactId>
+            <version>1.46</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
