--- a/pom.xml
+++ b/pom.xml
@@ -14,16 +14,6 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>com.rnkrsoft.groundwork</groupId>
-            <artifactId>groundwork</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.rnkrsoft.skeleton4j</groupId>
-            <artifactId>skeleton4j-api</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.2</version>
@@ -32,21 +22,23 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+            <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>com.zxevpop</groupId>
-            <artifactId>evpop-manage-api</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.zxevpop</groupId>
-            <artifactId>pay-gateway-api</artifactId>
-            <version>2.5.0-SNAPSHOT</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.zxevpop</groupId>-->
+            <!--<artifactId>evpop-manage-api</artifactId>-->
+            <!--<version>1.0.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>com.zxevpop</groupId>-->
+            <!--<artifactId>pay-gateway-api</artifactId>-->
+            <!--<version>2.5.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk16</artifactId>
             <version>1.46</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
