--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
             <!--<version>2.5.0-SNAPSHOT</version>-->
         <!--</dependency>-->
         <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.9</version>
+        </dependency>
+        <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk16</artifactId>
             <version>1.46</version>
