--- a/pom.xml
+++ b/pom.xml
@@ -25,26 +25,11 @@
             <scope>test</scope>
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>com.zxevpop</groupId>-->
-            <!--<artifactId>evpop-manage-api</artifactId>-->
-            <!--<version>1.0.0-SNAPSHOT</version>-->
+            <!--<groupId>org.bouncycastle</groupId>-->
+            <!--<artifactId>bcprov-jdk16</artifactId>-->
+            <!--<version>1.46</version>-->
+            <!--<scope>test</scope>-->
         <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>com.zxevpop</groupId>-->
-            <!--<artifactId>pay-gateway-api</artifactId>-->
-            <!--<version>2.5.0-SNAPSHOT</version>-->
-        <!--</dependency>-->
-        <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
-            <version>1.9</version>
-        </dependency>
-        <dependency>
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk16</artifactId>
-            <version>1.46</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
     <build>
         <plugins>
