--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     <url>https://github.com/rnkrsoft/interface-platform-client4j-sdk.git</url>
     <licenses>
         <license>
-            <name>RNKRSOFT OPEN SOURCE SOFTWARE LICENSE TERMS 1.0</name>
-            <url>http://www.rnkrsoft.com/open-source-licenses</url>
+            <name>GNU GENERAL PUBLIC LICENSE Version 2</name>
+            <url>http://www.gnu.org/licenses/old-licenses/gpl-2.0.txt</url>
         </license>
     </licenses>
     <scm>
