修改发布1.0.3版本

--- a/pom.xml
+++ b/pom.xml
@@ -209,6 +209,12 @@
     <profiles>
         <profile>
             <id>release</id>
+            <repositories>
+                <repository>
+                    <id>rnkrsoft</id>
+                    <url>http://nexus.rnkrsoft.com/content/repositories/public/</url>
+                </repository>
+            </repositories>
             <build>
                 <plugins>
                     <!-- Javadoc -->
